Analytics setup with some other changes

--- a/content/settings.json
+++ b/content/settings.json
@@ -13,7 +13,8 @@
   "socialMedia": {
     "facebook": "https://www.facebook.com/kanchanmarblearts",
     "instagram": "https://www.instagram.com/kanchanmarblearts",
-    "whatsappMessage": "Hello! I'm interested in your marble products and would like to discuss my requirements."
+    "whatsappMessage": "Hello! I'm interested in your marble products and want to discuss my needs.
+नमस्ते! मुझे आपके मार्बल प्रोडक्ट्स में रुचि है और मैं अपनी ज़रूरतों पर बात करना चाहता हूँ।"
   },
   "heroImages": ["/images/hero-mandir.jpg", "/images/hero-murti.jpg", "/images/hero-workshop.jpg"],
   "trustStats": {
