--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^11.3.31",
     "fs": "latest",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
